# ibverbs-rs

./: .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  build.rs  deploy.sh  deployer.sh  deployment_helper.sh  docker-compose.yml  docker-run  out  shell.nix  ssh-deps-vendor.ssh  wrapper.h
crates/circular-buffer/: Cargo.toml
crates/circular-buffer/examples/: mock_aliased_example.rs  mock_non_aliased_example.rs  mock_typed_aliased_example.rs  mock_typed_non_aliased_example.rs
crates/circular-buffer/src/: circular_buffer.rs  lib.rs  read_guard.rs  typed_circular_buffer.rs  typed_circular_buffer_read_guard.rs
crates/circular-buffer/src/mock_buffers/: aliased_readable.rs  aliased_writable.rs  dynamic_size_element.rs  mod.rs  non_aliased_readable.rs
crates/ebutils/: Cargo.toml  README.md
crates/ebutils/src/: alignment.rs  fragment.rs  fragment_type.rs  lib.rs  odin.rs  source_id.rs
crates/infiniband-rs/: Cargo.toml  build.rs
crates/infiniband-rs/examples/: channel.rs  connection_scope.rs  meta_mr.rs  mr_breaking.rs  multi_channel.rs  multi_channel_scatter_gather.rs  multi_channel_write.rs  network.rs  network_barrier_test.rs  network_barrier_test_random.rs  network_node.rs  raw_channel.rs  readwrite.rs  remote_mr_exchanger.rs  single_channel.rs  single_channel_break.rs  two_conns.rs
crates/infiniband-rs/src/: bindings.rs  completion_queue.rs  connection.rs  context.rs  devices.rs  global_id.rs  lib.rs  memory_region.rs  prepared_queue_pair.rs  protection_domain.rs  queue_pair.rs  queue_pair_builder.rs  queue_pair_endpoint.rs  synced_connection.rs
crates/infiniband-rs/src/channel/: builder.rs  cached_completion_queue.rs  meta_mr.rs  mod.rs  pending_work.rs  polled_ops.rs  polling_scope.rs  remote_mr_exchanger.rs  scoped.rs  scoped_ops.rs  unpolled_ops.rs
crates/infiniband-rs/src/connection/: builder.rs  cached_completion_queue.rs  connection.rs  connection_scope.rs  meta_memory_region.rs  mod.rs  prepared_connection.rs  unsafe_member.rs  work_completion.rs  work_error.rs  work_request.rs
crates/infiniband-rs/src/ibverbs/: access_config.rs  completion_queue.rs  context.rs  devices.rs  error.rs  memory_region.rs  mod.rs  numa.rs  prepared_queue_pair.rs  protection_domain.rs  qp_builder.rs  queue_pair.rs  queue_pair_builder.rs  queue_pair_endpoint.rs  remote_memory_region.rs  scatter_gather_element.rs  work_completion.rs  work_error.rs  work_request.rs  work_success.rs
crates/infiniband-rs/src/multi_channel/: builder.rs  mod.rs  mr_ops.rs  polled_ops.rs  polling_scope.rs  remote_memory_region.rs  scoped.rs  unpolled_ops.rs  work_request.rs
crates/infiniband-rs/src/network/: barrier.rs  builder.rs  config.rs  cooler_sge.rs  host.rs  host_memory_region.rs  memory_region.rs  mod.rs  multi_channel_ops.rs  network_config.rs  node.rs  old_node.rs  polling_scope.rs  prepared_host.rs  prepared_network.rs  scatter_gather_element.rs  tcp_exchanger.rs
crates/infiniband-rs/src/old_network/: memory_region.rs  network_config.rs  node.rs
crates/infiniband-rs/src/single_channel/: builder.rs  channel_ops.rs  mod.rs  mr_ops.rs  polled_ops.rs  scoped.rs  unpolled_ops.rs
crates/infinibuilder/: Cargo.toml
crates/infinibuilder/perftest/: rendezvous_perftest.rs
crates/infinibuilder/perftest/barrier/: barrier_perftest.rs  gather_stats.py  plot_results.py  run.sh  run_barrier.py  run_many_barrier.py  run_sweep.py
crates/infinibuilder/perftest/throughput/: plot_throughput.py  run.sh  run_throughput.py  throughput_perftest.rs
crates/infinibuilder/src/: centralized_sync.rs  component.rs  config_exchange.rs  connect.rs  connected_endpoint.rs  connected_network.rs  endpoint_builder.rs  lib.rs  mpi_traits.rs  network.rs  network_config.rs  new_tcp_exchanger.rs  rdma_backend.rs  rdma_connection.rs  rdma_network_node.rs  rdma_traits.rs  ready_network_config.rs  socket_qp_exchange.rs  spin_poll.rs  sync_component.rs  synchronization.rs  tcp_exchanger.rs  tcp_ready_node_exchange.rs  unconnected_endpoint.rs  work_request.rs
crates/infinibuilder/src/barrier/: all_enum.rs  binary_tree.rs  centralized.rs  dissemination.rs  mod.rs
crates/infinibuilder/src/ibverbs/: broken_fast_cached_cq.rs  cached_cq.rs  completion_queue.rs  connection.rs  ibv_wc_conversion.rs  init.rs  memory_region.rs  mod.rs  network_node.rs  old_simple_unit.rs  simple_unit.rs  unsafe_slice.rs  work_completion.rs  (+2 more)
crates/master-data-file/: Cargo.toml  README.md  test.mdf
crates/master-data-file/src/: builder.rs  file.rs  fragment.rs  header.rs  lib.rs  rounting_bits.rs  transpose.rs  writer.rs
crates/mock-buffers/: Cargo.toml
crates/mock-buffers/examples/: mock_aliased_example.rs  mock_non_aliased_example.rs  mock_typed_aliased_example.rs  mock_typed_non_aliased_example.rs
crates/mock-buffers/src/: aliased_buffer.rs  aliased_readable.rs  aliased_writable.rs  dynamic_size_element.rs  lib.rs  non_aliased_buffer.rs  non_aliased_readable.rs  non_aliased_writable.rs
crates/multi-event-packet/: Cargo.toml  README.md
crates/multi-event-packet/src/: builder.rs  lib.rs  owned.rs  simple_builder.rs  zerocopy_builder.rs
crates/multi-fragment-packet/: Cargo.toml  README.md
crates/multi-fragment-packet/examples/: continuous_mfp_pcie40_example.rs  mfp_pcie40_example.rs  mfp_shared_memory_example.rs
crates/multi-fragment-packet/src/: builder.rs  fragment.rs  fragment_type.rs  lib.rs  odin.rs  odin_mock.rs  owned.rs  pcie40_readable.rs  shared_memory_element.rs  source_id.rs  sub_detector.rs
crates/pcie40/: Cargo.toml  build.rs
crates/pcie40/src/: bindings.rs  ctrl.rs  id.rs  lib.rs  reader.rs
crates/shared-memory-buffer/: Cargo.toml
crates/shared-memory-buffer/examples/: shared_memory_example.rs
crates/shared-memory-buffer/src/: backend.rs  buffer_backend.rs  buffer_element.rs  buffer_status.rs  file_lock.rs  header.rs  lib.rs  posix_advisory_file_lock.rs  posix_shared_memory.rs  readable_buffer_element.rs  reader.rs  shared_memory.rs  structure.rs  writable_buffer_element.rs  writer.rs
crates/utils/: Cargo.toml
crates/utils/src/: alignment.rs  lib.rs  odin.rs
(+373 files in other folders)
