[package]
name = "ibverbs-rs"
version = "0.2.0"
description = "Rust libibverbs wrappers"
repository = "https://github.com/Tikitikitikidesuka/ibverbs-rs"
license = "MIT OR Apache-2.0"
edition = "2024"

[dependencies]
ibverbs-sys = "0.3.2"
log = "0.4.29"
intmap = "3.1.3"
num_enum = "0.7.5"
simple_logger = "5.1.0"
nix = { version = "0.30.0", default-features = false, features = ["fs", "poll"] }
thiserror = "2.0"
serde_json = "1.0.149"
zerocopy = { version = "0.8.35", features = ["derive"] }
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0", features = ["serde"] }
tokio = { version = "1.48", features = ["net", "io-util", "time", "rt"] }
bon = "3.8.2"
clap = { version = "4.5", features = ["derive"] }

[[bin]]
path = "bin/barrier_benchmark/barrier_benchmark.rs"
name = "barrier_benchmark"

[features]
numa = []

[lints.clippy]
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_sign_loss = "deny"
dbg_macro = "warn"
unwrap_used = "warn"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
