[package]
name = "ibverbs-rs"
version = "0.2.0"
description = "Safe, ergonomic Rust bindings for the InfiniBand libibverbs API"
repository = "https://github.com/Tikitikitikidesuka/ibverbs-rs"
license = "MIT OR Apache-2.0"
edition = "2024"
readme = "README.md"
keywords = ["rdma", "infiniband", "ibverbs", "networking", "hpc"]
categories = ["network-programming", "hardware-support", "api-bindings"]

[dependencies]
ibverbs-sys = "0.3.2"
log = "0.4.29"
intmap = "3.1.3"
num_enum = "0.7.5"
nix = { version = "0.30.0", default-features = false, features = ["fs", "poll"] }
thiserror = "2.0"
serde_json = "1.0.149"
zerocopy = { version = "0.8.35", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0", features = ["serde"] }
tokio = { version = "1.48", features = ["net", "io-util", "time", "rt"] }
bon = "3.8.2"

[dependencies.clap]
version = "4.5"
features = ["derive"]
optional = true

[dependencies.rand]
version = "0.9.2"
optional = true

[dev-dependencies]
simple_logger = "5.1.0"
clap = { version = "4.5", features = ["derive"] }
rand = "0.9.2"

[[bin]]
path = "bin/barrier_benchmark/barrier_benchmark.rs"
name = "barrier_benchmark"
required-features = ["clap", "rand"]

[features]
numa = []

[lints.clippy]
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_sign_loss = "deny"
dbg_macro = "warn"
unwrap_used = "warn"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
