[package]
name = "ibverbs-rs"
version = "0.4.0"
description = "Safe, ergonomic Rust bindings for the InfiniBand libibverbs API"
repository = "https://github.com/Tikitikitikidesuka/ibverbs-rs"
license = "MIT OR Apache-2.0"
edition = "2024"
readme = "README.md"
keywords = ["rdma", "infiniband", "ibverbs", "networking", "hpc"]
categories = ["network-programming", "hardware-support", "api-bindings"]

[dependencies]
ibverbs-sys = "0.3.2"
log = "0.4.29"
intmap = "3.1.3"
num_enum = "0.7.5"
nix = { version = "0.31.2", default-features = false, features = ["fs", "poll"] }
thiserror = "2.0"
serde_json = "1.0.149"
zerocopy = { version = "0.8.35", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.48", features = ["net", "io-util", "time", "rt"] }
bon = "3.8.2"

[dev-dependencies]
simple_logger = "5.1.0"
rand = "0.10.0"

[features]
numa = []

[lints.clippy]
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_sign_loss = "deny"
dbg_macro = "warn"
unwrap_used = "warn"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
