[package]
name = "infiniband-rs"
authors = ["Miguel Hermoso Mantecon"]
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
ibverbs-sys = "0.3.2"
log = "0.4.29"
intmap = "3.1.3"
num_enum = "0.7.5"
nix = { version = "0.30.0", default-features = false, features = ["fs", "poll"] }
thiserror.workspace = true
serde.workspace = true
bincode.workspace = true
tokio = {version= "1.48", features = ["net",  "io-util", "time", "rt"]}

[[bin]]
path = "bin/demo.rs"
name = "demo"
