[package]
name = "infinibuilder"
version = "0.1.0"
edition = "2024"

[dependencies]
ibverbs = { git = "https://github.com/Tikitikitikidesuka/rust-ibverbs.git", rev = "84f104d", features = ["serde"] }
derivative = "2.2.0"
num_enum = "0.7.4"
thiserror = "2.0.12"
rayon = "1.10.0"
serde_json = "1.0.141"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.0", features = ["net", "rt", "time", "io-util", "rt-multi-thread", "sync"] }
futures = "0.3"

[[bin]]
name = "loopback"
path = "bin/loopback.rs"

[[bin]]
name = "test"
path = "bin/test.rs"

[[bin]]
name = "simple_test"
path = "bin/simple_test.rs"

[[bin]]
name = "manual_endpoint"
path = "bin/manual_endpoint.rs"

[[bin]]
name = "socket_connector"
path = "bin/socket_connector.rs"

[[bin]]
name = "network_connection"
path = "bin/network_connection.rs"
