[package]
name = "infinibuilder"
version = "0.1.0"
edition = "2024"

[dependencies]
ibverbs = { git = "https://github.com/Tikitikitikidesuka/rust-ibverbs.git", rev = "84f104d", features = ["serde"] }
derivative = "2.2.0"
thiserror = "2.0.12"
serde_json = "1.0.141"
dashmap = "6.1.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.0", features = ["net", "rt", "time", "io-util", "rt-multi-thread", "sync"] }
futures = "0.3"
simple_logger = "5.0.0"

[[bin]]
name = "throughput_bench"
path = "bin/throughput_bench.rs"

[[bin]]
name = "loopback"
path = "bin/loopback.rs"

[[bin]]
name = "new_ib_test"
path = "bin/new_ib_test.rs"

[[bin]]
name = "network_test"
path = "bin/network_test.rs"

[[bin]]
name = "test"
path = "bin/test.rs"

[[bin]]
name = "simple_test"
path = "bin/simple_test.rs"

[[bin]]
name = "synchronization"
path = "bin/synchronization.rs"

[[bin]]
name = "data_transfer"
path = "bin/data_transfer.rs"

[[bin]]
name = "synced_transfer"
path = "bin/synced_transfer.rs"

[[bin]]
name = "manual_endpoint"
path = "bin/manual_endpoint.rs"

[[bin]]
name = "socket_connector"
path = "bin/socket_connector.rs"

[[bin]]
name = "network_connection"
path = "bin/network_connection.rs"
