[package]
name = "infinibuilder"
version = "0.1.0"
edition = "2024"

[dependencies]
ibverbs = { git = "https://github.com/Tikitikitikidesuka/rust-ibverbs.git", rev = "4bc58a8", features = [
    "serde",
] }
derivative = "2.2.0"
thiserror = "2.0.12"
serde_json = "1.0.141"
dashmap = "6.1.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.0", features = [
    "net",
    "rt",
    "time",
    "io-util",
    "rt-multi-thread",
    "sync",
] }
bincode = { version = "2.0.1", features = ["serde"] }
intmap = "3.1.2"
futures = "0.3"
simple_logger = "5.0.0"
itertools = "0.14.0"
rand = "0.9.2"
clap = { version = "4.5.48", features = ["derive"] }
log = "0.4.27"
bon = "3.8.1"

[[bin]]
name = "restructure_network_test"
path = "bin/restructure_network_test.rs"

[[bin]]
name = "restructure_test"
path = "bin/restructure_test.rs"

[[bin]]
name = "throughput_perftest"
path = "perftest/throughput/throughput_perftest.rs"

[[bin]]
name = "barrier_perftest"
path = "perftest/barrier/barrier_perftest.rs"

# [[bin]]
# name = "network_config"
# path = "bin/network_config.rs"

# [[bin]]
# name = "throughput_bench"
# path = "bin/throughput_bench.rs"

[[bin]]
name = "loopback"
path = "bin/loopback.rs"

# [[bin]]
# name = "new_ib_test"
# path = "bin/new_ib_test.rs"

# [[bin]]
# name = "network_test"
# path = "bin/network_test.rs"

# [[bin]]
# name = "test"
# path = "bin/test.rs"

[[bin]]
name = "simple_test"
path = "bin/simple_test.rs"

# [[bin]]
# name = "synchronization"
# path = "bin/synchronization.rs"

# [[bin]]
# name = "data_transfer"
# path = "bin/data_transfer.rs"

# [[bin]]
# name = "synced_transfer"
# path = "bin/synced_transfer.rs"

# [[bin]]
# name = "manual_endpoint"
# path = "bin/manual_endpoint.rs"


# [[bin]]
# name = "network_connection"
# path = "bin/network_connection.rs"
