[package]
name = "master-data-file"
description = "Crate for reading and writing MDF files."
authors = ["Jonatan Ziegler"]
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
multi-fragment-packet.workspace = true
multi-event-packet = { workspace = true, optional = true }
ebutils.workspace = true

bytemuck.workspace = true
typed-builder.workspace = true
thiserror.workspace = true
strum.workspace = true
memmap2 = { workspace = true, optional = true }

[lints]
workspace = true

[features]
default = ["mep"]
mmap = ["dep:memmap2"]
mep = ["dep:multi-event-packet"]

[dev-dependencies]
include_bytes_aligned = "0.1.4"
