[package]
name = "mock-buffers"
version = "0.1.0"
edition = "2024"
description = "Mock buffer implementations for the circular buffer interface of the LHCb Event Builder"

[dependencies]
thiserror.workspace = true
alignment-utils = { path = "../alignment-utils" }
circular-buffer = { path = "../circular-buffer" }

[[example]]
name = "mock_aliased_example"
path = "examples/mock_aliased_example.rs"

[[example]]
name = "mock_non_aliased_example"
path = "examples/mock_non_aliased_example.rs"

[[example]]
name = "mock_typed_aliased_example"
path = "examples/mock_typed_aliased_example.rs"

[[example]]
name = "mock_typed_non_aliased_example"
path = "examples/mock_typed_non_aliased_example.rs"
