[package]
name = "multi-event-packet"
description = "Crate for building and reading MEPs."
authors = ["Jonatan Ziegler"]
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
multi-fragment-packet.workspace = true
utils.workspace = true

bincode = { workspace = true, optional = true }
thiserror.workspace = true
tracing.workspace = true

[features]
bincode = ["dep:bincode"]

[lints]
workspace = true
