[package]
name = "multi-event-packet"
description = "Crate for building and reading MEPs."
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
multi-fragment-packet.workspace = true
ebutils.workspace = true

bincode = { workspace = true, optional = true }
thiserror.workspace = true
tracing.workspace = true
bytemuck.workspace = true
memmap2 = { workspace = true, optional = true }

[features]
bincode = ["dep:bincode"]
mmap = ["dep:memmap2"]

[lints]
workspace = true
