[package]
name = "multi-fragment-packet"
version = "0.1.0"
edition = "2024"
description = "Multi Fragment Packet structure for the LHCb Event Builder"

[dependencies]
thiserror.workspace = true
pcie40 = { path = "../pcie40", optional = true }
alignment-utils = { path = "../alignment-utils" }
circular-buffer = { path = "../circular-buffer" }
shared-memory-buffer = { path = "../shared-memory-buffer", optional = true }
bincode = { version = "2.0", optional = true }

[features]
pcie40-io = ["dep:pcie40"]
shmem-io = ["dep:shared-memory-buffer"]
bincode = ["dep:bincode"]

[[example]]
name = "mfp_shared_memory_example"
path = "examples/mfp_shared_memory_example.rs"
required-features = ["shmem-io"]

[[example]]
name = "continouous_mfp_pcie40_example"
path = "examples/continuous_mfp_pcie40_example.rs"
required-features = ["pcie40-readable"]

[[example]]
name = "mfp_pcie40_example"
path = "examples/mfp_pcie40_example.rs"
required-features = ["pcie40-readable"]
