[package]
name = "multi-fragment-packet"
description = "Multi Fragment Packet structure for the LHCb Event Builder"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
pcie40 = { path = "../pcie40", optional = true }
alignment-utils = { path = "../alignment-utils" }
circular-buffer = { path = "../circular-buffer" }
shared-memory-buffer = { path = "../shared-memory-buffer", optional = true }
bincode = { version = "2.0", optional = true }
typed-builder.workspace = true
bytemuck.workspace = true
strum.workspace = true

[features]
pcie40-io = ["dep:pcie40"]
shmem-io = ["dep:shared-memory-buffer"]
bincode = ["dep:bincode"]

[lints]
workspace = true

[[example]]
name = "mfp_shared_memory_example"
path = "examples/mfp_shared_memory_example.rs"
required-features = ["shmem-io"]

[[example]]
name = "continouous_mfp_pcie40_example"
path = "examples/continuous_mfp_pcie40_example.rs"
required-features = ["pcie40-readable"]

[[example]]
name = "mfp_pcie40_example"
path = "examples/mfp_pcie40_example.rs"
required-features = ["pcie40-readable"]
