[package]
name = "pcie40"
description = "Safe Rust PCIe40 bindings wrapper for the LHCb Event Builder"
authors = ["Miguel Hermoso Mantecon"]
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
tracing = "0.1.41"
alignment-utils = { path = "../alignment-utils" }
circular-buffer = { path = "../circular-buffer" }

[build-dependencies]
bindgen = { version = "0.72.0" }
