[package]
name = "pcie40"
description = "Safe Rust PCIe40 bindings wrapper for the LHCb Event Builder"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
ebutils.workspace = true
circular-buffer.workspace = true

thiserror.workspace = true
tracing.workspace = true

[build-dependencies]
bindgen = { version = "0.72.0" }

[features]
pcie40-hardware-tests = []
