[package]
name = "shared-memory-buffer"
description = "Safe Rust shared memory buffer implementation for interprocess communication for the LHCb Event Builder"
authors = ["Jonatan Ziegler"]
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
tracing = "0.1.41"
thiserror.workspace = true
nix = { version = "0.30.1", features = ["fs"] }
alignment-utils = { path = "../alignment-utils" }
circular-buffer = { path = "../circular-buffer" }
libc = "0.2.174"

[[example]]
name = "shared_memory_example"
path = "examples/shared_memory_example.rs"
