[package]
name = "shared-memory-buffer"
description = "Safe Rust shared memory buffer implementation for interprocess communication for the LHCb Event Builder"
authors = ["Miguel Hermoso Mantecon"]
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
ebutils.workspace = true
circular-buffer.workspace = true

tracing = "0.1.41"
thiserror.workspace = true
nix = { version = "0.30.1", features = ["fs"] }
libc = "0.2.174"

[[example]]
name = "shared_memory_example"
path = "examples/shared_memory_example.rs"
