[package]
name = "shared-memory-buffer"
description = "Safe Rust shared memory buffer implementation for interprocess communication for the LHCb Event Builder"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ebutils.workspace = true
circular-buffer.workspace = true

thiserror.workspace = true
nix = { version = "0.30.1", features = ["fs"] }
libc = "0.2.174"
log = "0.4.29"
zerocopy = { version = "0.8.35", features = ["derive"] }

[[example]]
name = "shared_memory_example"
path = "examples/shared_memory_example.rs"
